--- a/_includes/gallery_grid.html
+++ b/_includes/gallery_grid.html
@@ -12,13 +12,21 @@
     {% endif %}
   {% endif %}
   <div class="col-12 col-sm-6 col-md-4 gallery-item" data-location="{{ item.location | downcase }}" data-style="{{ item.style | join: ' ' | downcase }}" data-theme="{{ item.theme | join: ' ' | downcase }}" data-reveal>
-    <div class="card h-100">
-      <a href="#" class="stretched-link text-decoration-none" data-lightbox data-img="{{ item.image | relative_url }}" data-alt="{{ item.alt }}" data-caption="{{ item.caption | escape }}">
-        <img class="card-img-top gallery-card-img" src="{{ item.image | relative_url }}" alt="{{ item.alt }}" loading="lazy" />
-      </a>
-      <div class="card-body">
-        <div class="small text-muted text-uppercase">{{ item.tags | join: ', ' }}</div>
-        <div class="card-text">{{ item.caption }}</div>
+    <div class="flip-card" tabindex="0" aria-label="Flip to view details">
+      <div class="flip-inner">
+        <div class="flip-front">
+          <img class="card-img-top gallery-card-img" src="{{ item.image | relative_url }}" alt="{{ item.alt }}" loading="lazy" />
+        </div>
+        <div class="flip-back">
+          <div class="p-3">
+            <div class="small text-muted text-uppercase mb-1">{{ item.tags | join: ', ' }}</div>
+            <div class="fw-semibold">{{ item.title }}</div>
+            {% if item.caption %}<div class="small">{{ item.caption }}</div>{% endif %}
+            {% if item.size %}<div class="small">Size: {{ item.size }}</div>{% endif %}
+            {% if item.location %}<div class="small">City: {{ item.location }}</div>{% endif %}
+            <div class="mt-2"><a class="btn btn-sm btn-primary" href="{{ '/book/' | relative_url }}">Request a commission</a></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -27,4 +35,3 @@
   <div class="col-12"><p>No items yet. Add some in <code>_gallery/</code> or via <a href="{{ '/admin/' | relative_url }}">CMS</a>.</p></div>
 {% endif %}
 </div>
-
