--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+  <!-- Leaflet CSS for service area map -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css" integrity="sha384-sHL9NAb7lN7rfvG5lfHpm643Xkcjzp4jFvuavGOndn6pjVqS6ny56CAt3nsEVT4H" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}" />
   <!-- Analytics: insert GA or Plausible snippet here -->
 </head>
@@ -42,7 +44,7 @@
 
   <main class="container py-4">{{ content }}</main>
 
-  <footer class="py-4 mt-5 border-top text-center" style="background: linear-gradient(180deg, #ffffff, #f3f7ff);">
+  <footer class="py-4 mt-5 border-top text-center" style="background:#fff;">
     <div class="container">
       <div class="mb-2">
         {% if site.social.facebook %}
@@ -58,6 +60,8 @@
 
   <!-- Bootstrap JS (SRI + CSP allowlisted) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+  <!-- Leaflet JS for service area map -->
+  <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.js" integrity="sha384-cxOPjt7s7Iz04uaHJceBmS+qpjv2JkIHNVcuOrM+YHwZOmJGBXI00mdUXEq65HTH" crossorigin="anonymous" defer></script>
   <script src="{{ '/assets/js/main.js' | relative_url }}" defer></script>
   <script type="application/ld+json">
   {
