--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 
   <main class="container py-4">{{ content }}</main>
 
-  <footer class="py-4 mt-5 border-top text-center" style="background:#fff;">
+  <footer class="py-4 mt-5 border-top text-center site-footer">
     <div class="container">
       <div class="mb-2">
         {% if site.social.facebook %}
