Clean links: remove dead /services and /admin references; nicer Carto basemap for service map; remove teal/mint usage (hero now blue-tint).

--- a/_includes/gallery_grid.html
+++ b/_includes/gallery_grid.html
@@ -32,6 +32,6 @@
   </div>
 {% endfor %}
 {% if items == empty %}
-  <div class="col-12"><p>No items yet. Add some in <code>_gallery/</code> or via <a href="{{ '/admin/' | relative_url }}">CMS</a>.</p></div>
+  <div class="col-12"><p>No items yet. Add some in <code>_gallery/</code>.</p></div>
 {% endif %}
 </div>
