--- a/_includes/gallery_grid.html
+++ b/_includes/gallery_grid.html
@@ -1,5 +1,5 @@
 {% assign items = include.items | default: site.gallery %}
-<div class="row g-3" id="gallery-grid">
+<div class="masonry" id="gallery-grid">
 {% for item in items %}
   {% if include.category %}
     {% assign cat = include.category %}
@@ -11,13 +11,11 @@
       {% continue %}
     {% endif %}
   {% endif %}
-  <div class="col-12 col-sm-6 col-md-4 gallery-item" data-location="{{ item.location | downcase }}" data-style="{{ item.style | join: ' ' | downcase }}" data-theme="{{ item.theme | join: ' ' | downcase }}" data-reveal>
+  <div class="masonry-item gallery-item" data-location="{{ item.location | downcase }}" data-style="{{ item.style | join: ' ' | downcase }}" data-theme="{{ item.theme | join: ' ' | downcase }}" data-reveal>
     <div class="flip-card" tabindex="0" aria-label="Flip to view details">
       <div class="flip-inner">
         <div class="flip-front">
-          <div class="ratio-rect">
-            <img class="gallery-card-img" src="{{ item.image | relative_url }}" alt="{{ item.alt }}" loading="lazy" />
-          </div>
+          <img class="gallery-card-img" src="{{ item.image | relative_url }}" alt="{{ item.alt }}" loading="lazy" />
         </div>
         <div class="flip-back">
           <div class="p-3">
